--- a/o2c/index.html
+++ b/o2c/index.html
@@ -45,6 +45,8 @@ function getView(t){
   onended="history.go(0)"
 >	<source src="https://dl.sndup.net/ds44j/sara.ogg"
 		property="contentUrl" type="audio/ogg">
+	<source src="sara.ogg"
+		property="contentUrl" type="audio/ogg">
 	<source src="https://dl.sndup.net/ds44j/sara.mp3"
 		property="contentUrl" type="audio/mpeg">
 	<track src="sara.vtt" oncuechange="getView(this)"
