Update ArcadeClassics.html a11y compliance

--- a/ArcadeClassics.html
+++ b/ArcadeClassics.html
@@ -33,33 +33,34 @@ document.onreadystatechange = () => {if(document.readyState === "interactive") {
 <h1><a href="https://dn721600.ca.archive.org/0/items/arcade-classics/ArcadeClassics.d64">C64 Arcade Classics</a></h1>
 <main>
 <figure><figcaption>Pacman</figcaption>
-<a href="https://archive.org/download/arcade-classics/pacman.svg" style="--vg:url(https://dn721600.ca.archive.org/0/items/arcade-classics/pacman.svg)"></a>
+<a href="https://archive.org/download/arcade-classics/pacman.svg" style="--vg:url(https://dn721600.ca.archive.org/0/items/arcade-classics/pacman.svg)">&#8203;</a>
 </figure><figure><figcaption>Asteroids</figcaption>
-<a href="https://archive.org/download/arcade-classics/asteroids.svg" style="--vg:url(https://dn721600.ca.archive.org/0/items/arcade-classics/asteroids.svg)"></a>
+<a href="https://archive.org/download/arcade-classics/asteroids.svg" style="--vg:url(https://dn721600.ca.archive.org/0/items/arcade-classics/asteroids.svg)">&#8203;</a>
 </figure><figure><figcaption>Space Invaders</figcaption>
-<a href="https://archive.org/download/arcade-classics/spaceinvaders.svg" style="--vg:url(https://ia801604.us.archive.org/10/items/arcade-classics/spaceinvaders.svg)"></a>
+<a href="https://archive.org/download/arcade-classics/spaceinvaders.svg" style="--vg:url(https://ia801604.us.archive.org/10/items/arcade-classics/spaceinvaders.svg)">&#8203;</a>
 </figure><figure><figcaption>Frogger</figcaption>
-<a href="https://archive.org/download/arcade-classics/frogger.svg" style="--vg:url(https://dn721600.ca.archive.org/0/items/arcade-classics/frogger.svg)"></a>
+<a href="https://archive.org/download/arcade-classics/frogger.svg" style="--vg:url(https://dn721600.ca.archive.org/0/items/arcade-classics/frogger.svg)">&#8203;</a>
 </figure><figure><figcaption>Tetris</figcaption>
-<a href="https://archive.org/download/arcade-classics/tetris.svg" style="--vg:url(https://ia601604.us.archive.org/10/items/arcade-classics/tetris.svg)"></a>
+<a href="https://archive.org/download/arcade-classics/tetris.svg" style="--vg:url(https://ia601604.us.archive.org/10/items/arcade-classics/tetris.svg)">&#8203;</a>
 </figure><figure><figcaption>Snake</figcaption>
-<a href="https://archive.org/download/arcade-classics/snake.svg" style="--vg:url(https://dn721600.ca.archive.org/0/items/arcade-classics/snake.svg)"></a>
+<a href="https://archive.org/download/arcade-classics/snake.svg" style="--vg:url(https://dn721600.ca.archive.org/0/items/arcade-classics/snake.svg)">&#8203;</a>
 </figure><figure><figcaption>Breakout</figcaption>
-<a href="https://archive.org/download/arcade-classics/breakout.svg" style="--vg:url(https://dn721600.ca.archive.org/0/items/arcade-classics/breakout.svg)"></a>
+<a href="https://archive.org/download/arcade-classics/breakout.svg" style="--vg:url(https://dn721600.ca.archive.org/0/items/arcade-classics/breakout.svg)">&#8203;</a>
 </figure><figure><figcaption>Q-Bert</figcaption>
-<a href="https://archive.org/download/arcade-classics/q-bert.svg" style="--vg:url(https://ia601604.us.archive.org/10/items/arcade-classics/q-bert.svg)"></a>
+<a href="https://archive.org/download/arcade-classics/q-bert.svg" style="--vg:url(https://ia601604.us.archive.org/10/items/arcade-classics/q-bert.svg)">&#8203;</a>
 </figure><figure><figcaption>Gyruss</figcaption>
-<a href="https://archive.org/download/arcade-classics/gyruss.svg" style="--vg:url(https://dn721600.ca.archive.org/0/items/arcade-classics/gyruss.svg)"></a>
+<a href="https://archive.org/download/arcade-classics/gyruss.svg" style="--vg:url(https://dn721600.ca.archive.org/0/items/arcade-classics/gyruss.svg)">&#8203;</a>
 </figure><figure><figcaption>Missile Command</figcaption>
-<a href="https://archive.org/download/arcade-classics/missilecommand.svg" style="--vg:url(https://dn721600.ca.archive.org/0/items/arcade-classics/missilecommand.svg)"></a>
+<a href="https://archive.org/download/arcade-classics/missilecommand.svg" style="--vg:url(https://dn721600.ca.archive.org/0/items/arcade-classics/missilecommand.svg)">&#8203;</a>
 </figure><figure><figcaption>Defender</figcaption>
-<a href="https://archive.org/download/arcade-classics/defender.svg" style="--vg:url(https://dn721600.ca.archive.org/0/items/arcade-classics/defender.svg)"></a>
+<a href="https://archive.org/download/arcade-classics/defender.svg" style="--vg:url(https://dn721600.ca.archive.org/0/items/arcade-classics/defender.svg)">&#8203;</a>
 </figure><figure><figcaption>Choplifter</figcaption>
-<a href="https://archive.org/download/arcade-classics/choplifter.svg" style="--vg:url(https://dn721600.ca.archive.org/0/items/arcade-classics/choplifter.svg)"></a>
+<a href="https://archive.org/download/arcade-classics/choplifter.svg" style="--vg:url(https://dn721600.ca.archive.org/0/items/arcade-classics/choplifter.svg)">&#8203;</a>
 </figure><figure><figcaption>Popeye</figcaption>
-<a href="https://archive.org/download/arcade-classics/popeye.svg" style="--vg:url(https://dn721600.ca.archive.org/0/items/arcade-classics/popeye.svg)"></a>
+<a href="https://archive.org/download/arcade-classics/popeye.svg" style="--vg:url(https://dn721600.ca.archive.org/0/items/arcade-classics/popeye.svg)">&#8203;</a>
 </figure><figure><figcaption>Oils Well</figcaption>
-<a href="https://archive.org/download/arcade-classics/oilswell.svg" style="--vg:url(https://dn721600.ca.archive.org/0/items/arcade-classics/oilswell.svg)"></a>
+<a href="https://archive.org/download/arcade-classics/oilswell.svg" style="--vg:url(https://dn721600.ca.archive.org/0/items/arcade-classics/oilswell.svg)">&#8203;</a>
 </figure><figure><figcaption>River Raid</figcaption>
-<a href="https://archive.org/download/arcade-classics/riverraid.svg" style="--vg:url(https://dn721600.ca.archive.org/0/items/arcade-classics/riverraid.svg)"></a>
+<a href="https://archive.org/download/arcade-classics/riverraid.svg" style="--vg:url(https://dn721600.ca.archive.org/0/items/arcade-classics/riverraid.svg)">&#8203;</a>
 </figure></main></body></html>
+
