--- a/ArcadeClassics.html
+++ b/ArcadeClassics.html
@@ -19,7 +19,7 @@
 :root {background-color:#958DFF}
 main {display:grid;margin:0 auto;align-items:center;width:fit-content;grid-template: repeat(5, 1fr) / repeat(3, 1fr)}
 h1,figcaption {font-variant:small-caps;text-align:center;font-size:xx-large;font-family:"C64 Pro"}
-a[style] {display:inline-block;width:384px;height:272px;background:no-repeat var(--vg);}
+a[style] {display:inline-block;width:384px;height:272px;background:no-repeat var(--vg);font-size:18pt}
 </style>
 <script>
 // @license magnet:?xt=urn:btih:90dc5c0be029de84e523b9b3922520e79e0e6f08&dn=cc0.txt
@@ -63,4 +63,5 @@ document.onreadystatechange = () => {if(document.readyState === "interactive") {
 </figure><figure><figcaption>River Raid</figcaption>
 <a href="https://archive.org/download/arcade-classics/riverraid.svg" style="--vg:url(https://dn721600.ca.archive.org/0/items/arcade-classics/riverraid.svg)">&#8203;</a>
 </figure></main></body></html>
+
 
