--- a/c64/ArcadeClassics.html
+++ b/c64/ArcadeClassics.html
@@ -33,35 +33,33 @@ document.onreadystatechange = () => {if(document.readyState === "interactive") {
 <h1><a href="https://dn721600.ca.archive.org/0/items/arcade-classics/ArcadeClassics.d64">C64 Arcade Classics</a></h1>
 <main>
 <figure><figcaption>Pacman</figcaption>
-<a href="https://archive.org/download/arcade-classics/pacman.svg" style="--vg:url(https://dn721600.ca.archive.org/0/items/arcade-classics/pacman.svg)">&#8203;</a>
+<a href="pacman.svg" style="--vg:url(pacman.svg)">&#8203;</a>
 </figure><figure><figcaption>Asteroids</figcaption>
-<a href="https://archive.org/download/arcade-classics/asteroids.svg" style="--vg:url(https://dn721600.ca.archive.org/0/items/arcade-classics/asteroids.svg)">&#8203;</a>
+<a href="asteroids.svg" style="--vg:url(asteroids.svg)">&#8203;</a>
 </figure><figure><figcaption>Space Invaders</figcaption>
-<a href="https://archive.org/download/arcade-classics/spaceinvaders.svg" style="--vg:url(https://ia801604.us.archive.org/10/items/arcade-classics/spaceinvaders.svg)">&#8203;</a>
+<a href="spaceinvaders.svg" style="--vg:url(spaceinvaders.svg)">&#8203;</a>
 </figure><figure><figcaption>Frogger</figcaption>
-<a href="https://archive.org/download/arcade-classics/frogger.svg" style="--vg:url(https://dn721600.ca.archive.org/0/items/arcade-classics/frogger.svg)">&#8203;</a>
+<a href="frogger.svg" style="--vg:url(frogger.svg)">&#8203;</a>
 </figure><figure><figcaption>Tetris</figcaption>
-<a href="https://archive.org/download/arcade-classics/tetris.svg" style="--vg:url(https://ia601604.us.archive.org/10/items/arcade-classics/tetris.svg)">&#8203;</a>
+<a href="tetris.svg" style="--vg:url(tetris.svg)">&#8203;</a>
 </figure><figure><figcaption>Snake</figcaption>
-<a href="https://archive.org/download/arcade-classics/snake.svg" style="--vg:url(https://dn721600.ca.archive.org/0/items/arcade-classics/snake.svg)">&#8203;</a>
+<a href="snake.svg" style="--vg:url(snake.svg)">&#8203;</a>
 </figure><figure><figcaption>Breakout</figcaption>
-<a href="https://archive.org/download/arcade-classics/breakout.svg" style="--vg:url(https://dn721600.ca.archive.org/0/items/arcade-classics/breakout.svg)">&#8203;</a>
+<a href="breakout.svg" style="--vg:url(breakout.svg)">&#8203;</a>
 </figure><figure><figcaption>Q-Bert</figcaption>
-<a href="https://archive.org/download/arcade-classics/q-bert.svg" style="--vg:url(https://ia601604.us.archive.org/10/items/arcade-classics/q-bert.svg)">&#8203;</a>
+<a href="q-bert.svg" style="--vg:url(q-bert.svg)">&#8203;</a>
 </figure><figure><figcaption>Gyruss</figcaption>
-<a href="https://archive.org/download/arcade-classics/gyruss.svg" style="--vg:url(https://dn721600.ca.archive.org/0/items/arcade-classics/gyruss.svg)">&#8203;</a>
+<a href="gyruss.svg" style="--vg:url(gyruss.svg)">&#8203;</a>
 </figure><figure><figcaption>Missile Command</figcaption>
-<a href="https://archive.org/download/arcade-classics/missilecommand.svg" style="--vg:url(https://dn721600.ca.archive.org/0/items/arcade-classics/missilecommand.svg)">&#8203;</a>
+<a href="missilecommand.svg" style="--vg:url(missilecommand.svg)">&#8203;</a>
 </figure><figure><figcaption>Defender</figcaption>
-<a href="https://archive.org/download/arcade-classics/defender.svg" style="--vg:url(https://dn721600.ca.archive.org/0/items/arcade-classics/defender.svg)">&#8203;</a>
+<a href="defender.svg" style="--vg:url(defender.svg)">&#8203;</a>
 </figure><figure><figcaption>Choplifter</figcaption>
-<a href="https://archive.org/download/arcade-classics/choplifter.svg" style="--vg:url(https://dn721600.ca.archive.org/0/items/arcade-classics/choplifter.svg)">&#8203;</a>
+<a href="choplifter.svg" style="--vg:url(choplifter.svg)">&#8203;</a>
 </figure><figure><figcaption>Popeye</figcaption>
-<a href="https://archive.org/download/arcade-classics/popeye.svg" style="--vg:url(https://dn721600.ca.archive.org/0/items/arcade-classics/popeye.svg)">&#8203;</a>
+<a href="popeye.svg" style="--vg:url(popeye.svg)">&#8203;</a>
 </figure><figure><figcaption>Oils Well</figcaption>
-<a href="https://archive.org/download/arcade-classics/oilswell.svg" style="--vg:url(https://dn721600.ca.archive.org/0/items/arcade-classics/oilswell.svg)">&#8203;</a>
+<a href="oilswell.svg" style="--vg:url(oilswell.svg)">&#8203;</a>
 </figure><figure><figcaption>River Raid</figcaption>
-<a href="https://archive.org/download/arcade-classics/riverraid.svg" style="--vg:url(https://dn721600.ca.archive.org/0/items/arcade-classics/riverraid.svg)">&#8203;</a>
+<a href="riverraid.svg" style="--vg:url(riverraid.svg)">&#8203;</a>
 </figure></main></body></html>
-
-
