--- a/c64/ArcadeClassics.html
+++ b/c64/ArcadeClassics.html
@@ -32,35 +32,35 @@ document.onreadystatechange = () => {if(document.readyState === "interactive") {
 </head>
 <body>
 <h1><a href="https://dn721600.ca.archive.org/0/items/arcade-classics/ArcadeClassics.d64">C64 Arcade Classics</a></h1>
-<main>
-<figure><figcaption>Pacman</figcaption>
-<a href="pacman.svg" style="--vg:url(/c64/pacman.svg)">&#8203;</a>
-</figure><figure><figcaption>Asteroids</figcaption>
-<a href="asteroids.svg" style="--vg:url(/c64/asteroids.svg)">&#8203;</a>
-</figure><figure><figcaption>Space Invaders</figcaption>
-<a href="spaceinvaders.svg" style="--vg:url(/c64/spaceinvaders.svg)">&#8203;</a>
-</figure><figure><figcaption>Frogger</figcaption>
-<a href="frogger.svg" style="--vg:url(/c64/frogger.svg)">&#8203;</a>
-</figure><figure><figcaption>Tetris</figcaption>
-<a href="tetris.svg" style="--vg:url(/c64/tetris.svg)">&#8203;</a>
-</figure><figure><figcaption>Snake</figcaption>
-<a href="snake.svg" style="--vg:url(/c64/snake.svg)">&#8203;</a>
-</figure><figure><figcaption>Breakout</figcaption>
-<a href="breakout.svg" style="--vg:url(/c64/breakout.svg)">&#8203;</a>
-</figure><figure><figcaption>Q-Bert</figcaption>
-<a href="q-bert.svg" style="--vg:url(/c64/q-bert.svg)">&#8203;</a>
-</figure><figure><figcaption>Gyruss</figcaption>
-<a href="gyruss.svg" style="--vg:url(/c64/gyruss.svg)">&#8203;</a>
-</figure><figure><figcaption>Missile Command</figcaption>
-<a href="missilecommand.svg" style="--vg:url(/c64/missilecommand.svg)">&#8203;</a>
-</figure><figure><figcaption>Defender</figcaption>
-<a href="defender.svg" style="--vg:url(/c64/defender.svg)">&#8203;</a>
-</figure><figure><figcaption>Choplifter</figcaption>
-<a href="choplifter.svg" style="--vg:url(/c64/choplifter.svg)">&#8203;</a>
-</figure><figure><figcaption>Popeye</figcaption>
-<a href="popeye.svg" style="--vg:url(/c64/popeye.svg)">&#8203;</a>
-</figure><figure><figcaption>Oils Well</figcaption>
-<a href="oilswell.svg" style="--vg:url(/c64/oilswell.svg)">&#8203;</a>
-</figure><figure><figcaption>River Raid</figcaption>
-<a href="riverraid.svg" style="--vg:url(/c64/riverraid.svg)">&#8203;</a>
+<main vocab="http://schema.org/" typeof="ImageGallery">
+<figure typeof="ImageObject" property="image"><figcaption>Pacman</figcaption>
+<a property="ContentUrl" href="pacman.svg" style="--vg:url(/c64/pacman.svg)">&#8203;</a>
+</figure><figure typeof="ImageObject" property="image"><figcaption>Asteroids</figcaption>
+<a property="ContentUrl" href="asteroids.svg" style="--vg:url(/c64/asteroids.svg)">&#8203;</a>
+</figure><figure typeof="ImageObject" property="image"><figcaption>Space Invaders</figcaption>
+<a property="ContentUrl" href="spaceinvaders.svg" style="--vg:url(/c64/spaceinvaders.svg)">&#8203;</a>
+</figure><figure typeof="ImageObject" property="image"><figcaption>Frogger</figcaption>
+<a property="ContentUrl" href="frogger.svg" style="--vg:url(/c64/frogger.svg)">&#8203;</a>
+</figure><figure typeof="ImageObject" property="image"><figcaption>Tetris</figcaption>
+<a property="ContentUrl" href="tetris.svg" style="--vg:url(/c64/tetris.svg)">&#8203;</a>
+</figure><figure typeof="ImageObject" property="image"><figcaption>Snake</figcaption>
+<a property="ContentUrl" href="snake.svg" style="--vg:url(/c64/snake.svg)">&#8203;</a>
+</figure><figure typeof="ImageObject" property="image"><figcaption>Breakout</figcaption>
+<a property="ContentUrl" href="breakout.svg" style="--vg:url(/c64/breakout.svg)">&#8203;</a>
+</figure><figure typeof="ImageObject" property="image"><figcaption>Q-Bert</figcaption>
+<a property="ContentUrl" href="q-bert.svg" style="--vg:url(/c64/q-bert.svg)">&#8203;</a>
+</figure><figure typeof="ImageObject" property="image"><figcaption>Gyruss</figcaption>
+<a property="ContentUrl" href="gyruss.svg" style="--vg:url(/c64/gyruss.svg)">&#8203;</a>
+</figure><figure typeof="ImageObject" property="image"><figcaption>Missile Command</figcaption>
+<a property="ContentUrl" href="missilecommand.svg" style="--vg:url(/c64/missilecommand.svg)">&#8203;</a>
+</figure><figure typeof="ImageObject" property="image"><figcaption>Defender</figcaption>
+<a property="ContentUrl" href="defender.svg" style="--vg:url(/c64/defender.svg)">&#8203;</a>
+</figure><figure typeof="ImageObject" property="image"><figcaption>Choplifter</figcaption>
+<a property="ContentUrl" href="choplifter.svg" style="--vg:url(/c64/choplifter.svg)">&#8203;</a>
+</figure><figure typeof="ImageObject" property="image"><figcaption>Popeye</figcaption>
+<a property="ContentUrl" href="popeye.svg" style="--vg:url(/c64/popeye.svg)">&#8203;</a>
+</figure><figure typeof="ImageObject" property="image"><figcaption>Oils Well</figcaption>
+<a property="ContentUrl" href="oilswell.svg" style="--vg:url(/c64/oilswell.svg)">&#8203;</a>
+</figure><figure typeof="ImageObject" property="image"><figcaption>River Raid</figcaption>
+<a property="ContentUrl" href="riverraid.svg" style="--vg:url(/c64/riverraid.svg)">&#8203;</a>
 </figure></main></body></html>
