--- a/c64/ArcadeClassics.html
+++ b/c64/ArcadeClassics.html
@@ -63,4 +63,172 @@ document.onreadystatechange = () => {if(document.readyState === "interactive") {
 <a property="ContentUrl" href="oilswell.svg" style="--vg:url(/c64/oilswell.svg)">&#8203;</a>
 </figure><figure typeof="ImageObject" property="image"><figcaption>River Raid</figcaption>
 <a property="ContentUrl" href="riverraid.svg" style="--vg:url(/c64/riverraid.svg)">&#8203;</a>
-</figure></main></body></html>
+</figure></main>
+<svg style="float:right;height:3vh;padding-right:0.5vw" role="img" aria-label="Valid HTML5"
+   viewBox="0 0 551.505 204.629"
+   overflow="visible"
+   enable-background="new 0 0 551.505 204.629"
+   xml:space="preserve"
+   id="svg3281"
+   xmlns="http://www.w3.org/2000/svg"
+><a href="https://validator.w3.org/nu/?doc=https://peripheraldrift.onrender.com/c64/ArcadeClassics.html">
+<g
+   id="g3286">
+						<rect
+   style="fill:#cccccc"
+   x="0"
+   id="rect3288"
+   height="173.802"
+   width="517.521"
+   y="13.449" /> 
+					</g><rect
+   x="5.3400002"
+   y="20.246"
+   width="510.724"
+   height="167.005"
+   id="rect3292"
+   style="fill:#ffffff" /><g
+   id="g3294">
+						<rect
+   style="fill:#b3cee1"
+   id="rect3296"
+   height="167.006"
+   width="293.229"
+   y="20.731001"
+   x="222.35001" /> 
+					</g><g
+   id="g2299">
+								<path
+   style="fill:#221b0a"
+   d="M 209.16571,56.324 L 211.29771,67.053253 L 204.70875,83.235483 C 204.70875,83.235483 200.86171,75.84577 196.04671,72.45477 C 191.99671,69.59677 187.92816,69.771966 183.79916,70.622966 C 178.48816,71.717966 174.54107,76.790253 171.92207,84.352253 C 172.17707,84.352253 171.20545,86.576 171.20545,86.576 C 168.06245,95.926 169.30916,100.29616 169.352,104.617 C 169.41812,111.28605 170.232,115.226 170.232,115.226 C 170.232,115.226 165.652,106.752 165.695,94.336 C 165.721,85.482 167.116,77.445 171.214,69.518 C 174.819,62.548 180.174,58.365 184.934,57.879 C 189.849,57.36 193.743,59.732 196.743,62.301 C 199.893,64.994 203.088,70.885 203.088,70.885 L 209.16571,56.324 z "
+   id="path2301" />
+								<path
+   style="fill:#221b0a"
+   d="M 208.826,129.637 C 208.826,129.637 205.492,135.595 203.418,137.896 C 201.343,140.187 197.627,144.231 193.027,146.256 C 188.438,148.278 186.034,148.66 181.491,148.222 C 176.959,147.784 172.75,145.164 171.274,144.062 C 169.792,142.972 166.017,139.745 163.897,136.75 C 161.755,133.738 158.428,127.722 158.428,127.722 C 158.428,127.722 160.281,133.749 161.443,136.305 C 162.106,137.777 164.172,142.275 167.09,146.199 C 169.803,149.855 175.104,156.149 183.138,157.565 C 191.175,158.99 196.693,155.384 198.062,154.508 C 199.424,153.63 202.305,151.223 204.128,149.274 C 206.037,147.236 207.83,144.632 208.826,143.082 C 209.564,141.943 210.746,139.642 210.746,139.642 L 208.826,129.637 z "
+   id="path2303" />
+							</g><g
+   id="g2305">
+								<polygon
+   style="fill:#005a9c"
+   points="70.064,56.899 88.236,118.669 106.405,56.899 119.555,56.899 89.487,158.386 88.234,158.386 69.438,95.493 50.644,158.386 49.388,158.386 19.321,56.899 32.475,56.899 50.644,118.669 62.923,77.07 56.906,56.899 70.064,56.899 "
+   id="path2307" />
+								<path
+   style="fill:#005a9c"
+   d="M 156.913,125.805 C 156.913,134.996 154.469,142.727 149.582,148.99 C 144.698,155.253 138.37,158.387 130.601,158.387 C 124.757,158.387 119.659,156.521 115.318,152.811 C 110.971,149.088 107.753,144.055 105.665,137.716 L 115.942,133.455 C 117.446,137.298 119.433,140.326 121.893,142.537 C 124.354,144.745 127.254,145.854 130.601,145.854 C 134.109,145.854 137.077,143.889 139.501,139.971 C 141.924,136.047 143.134,131.32 143.134,125.805 C 143.134,119.709 141.835,114.996 139.242,111.65 C 136.241,107.728 131.519,105.759 125.083,105.759 L 120.075,105.759 L 120.075,99.748 L 137.616,69.425 L 116.435,69.425 L 110.547,79.443 L 106.801,79.443 L 106.801,56.899 L 155.659,56.899 L 155.659,63.032 L 137.117,94.991 C 143.624,97.07 148.56,100.878 151.9,106.39 C 155.243,111.906 156.913,118.374 156.913,125.805 z "
+   id="path2309" />
+							</g><g
+   id="g3315">
+						<rect
+   style="fill:#4f4f4f"
+   id="rect3317"
+   height="5.8249998"
+   width="510.23901"
+   y="181.425"
+   x="5.3400002" /> 
+					</g><g
+   id="g3319">
+						<g
+   id="g3321">
+							<rect
+   style="fill:#b39f67"
+   id="rect3323"
+   height="5.8249998"
+   width="293.715"
+   y="176.571"
+   x="222.35001" /> 
+						</g>
+						<g
+   id="g3325">
+							<rect
+   style="fill:#b4b4b4"
+   id="rect3327"
+   height="5.8249998"
+   width="217.009"
+   y="176.571"
+   x="5.3400002" /> 
+						</g>
+					</g><g
+   id="g3329">
+						<polygon
+   style="fill:#e44d26"
+   id="polygon3331"
+   points="277.795,191.098 257.909,45.275 401.367,38.584 395.125,185.602 337.138,204.629 277.795,191.098 " />
+						<polygon
+   style="fill:#f16529"
+   id="polygon3333"
+   points="336.645,192.174 383.5,176.801 388.835,51.168 330.196,53.903 336.645,192.174 " />
+						<polygon
+   style="fill:#ebebeb"
+   id="polygon3335"
+   points="332.729,108.213 308.964,109.322 306.465,91.006 331.87,89.821 331.032,71.862 330.973,71.865 286.001,73.962 286.656,78.76 293.376,128.046 333.566,126.172 332.729,108.213 " />
+						<polygon
+   style="fill:#ebebeb"
+   id="polygon3337"
+   points="334.903,154.852 334.826,154.878 314.574,150.411 312.627,136.146 302.908,136.599 294.599,136.987 298.43,165.07 335.693,173.567 335.775,173.54 334.903,154.852 " />
+						<polygon
+   style="fill:var(--tcolor)"
+   id="polygon3339"
+   points="269.401,4.859 278.528,4.433 278.949,13.45 287.298,13.061 286.877,4.043 296.004,3.619 297.277,30.925 288.151,31.35 287.724,22.207 279.375,22.596 279.802,31.74 270.675,32.165 269.401,4.859 " />
+						<polygon
+   style="fill:var(--tcolor)"
+   id="polygon3341"
+   points="308.428,12.113 300.393,12.487 299.97,3.433 325.171,2.258 325.594,11.312 317.555,11.687 318.405,29.939 309.278,30.365 308.428,12.113 " />
+						<polygon
+   style="fill:var(--tcolor)"
+   id="polygon3343"
+   points="329.17,2.071 338.687,1.627 344.988,10.949 350.388,1.082 359.908,0.638 361.183,27.944 352.092,28.368 351.461,14.833 345.635,24.834 345.479,24.842 338.742,15.427 339.373,28.961 330.443,29.378 329.17,2.071 " />
+						<polygon
+   style="fill:var(--tcolor)"
+   id="polygon3345"
+   points="364.451,0.426 373.581,0 374.434,18.281 387.27,17.682 387.69,26.708 365.726,27.732 364.451,0.426 " />
+						<polygon
+   style="fill:#ffffff"
+   id="polygon3347"
+   points="332.666,108.216 333.504,126.175 355.62,125.144 354.621,148.531 334.843,154.872 335.714,173.556 372.059,161.636 372.184,158.587 374.199,111.111 374.413,106.27 369.573,106.496 332.666,108.216 " />
+						<polygon
+   style="fill:#ffffff"
+   id="polygon3349"
+   points="330.973,71.865 331.492,83.02 331.808,89.781 331.81,89.824 375.131,87.804 375.131,87.804 375.189,87.801 375.36,83.749 375.756,74.604 375.961,69.767 330.973,71.865 " />
+					</g><g
+   id="g3351">
+						<rect
+   style="fill:#4f4f4f"
+   id="rect3353"
+   height="165.401"
+   width="5.8260002"
+   y="20.246"
+   x="510.72501" /> 
+					</g><g
+   id="g3355">
+						<rect
+   style="fill:#b39f67"
+   id="rect3357"
+   height="160.694"
+   width="5.8260002"
+   y="20.731001"
+   x="504.89801" /> 
+					</g><g
+   id="g3359">
+						<polygon
+   style="fill:#980f08"
+   id="polygon3361"
+   points="402.462,115.4 425.766,92.097 454.409,120.74 528.202,46.947 551.505,70.25 456.352,165.405 402.462,115.4 " />
+					</g><g
+   id="g3363">
+						<polygon
+   style="fill:#840b08"
+   id="polygon3365"
+   points="410.389,107.594 425.28,93.068 453.924,121.711 527.717,47.918 538.843,58.063 455.865,140.166 410.389,107.594 " />
+					</g>
+	</a></svg>
+<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewbox="0 0 255 90" style="margin-left:1ex;height:3vh" role="img" aria-label="The source code of this page is free to copy without permission">
+<a xlink:href="https://creativecommons.org/publicdomain/zero/1.0/">
+<rect x="1" y="1" width="253" height="87" rx="4" ry="4" stroke-width="2" stroke="#000000" fill="#aab2ab"/>
+<rect x="0" y="63" width="255" height="26" stroke="none" fill="#000000"/>
+<circle cx="44" cy="42" r="40.1" stroke="none" fill="#aab2ab"/>
+<circle cx="44" cy="42" r="30.5" stroke-width="6" stroke="#000000" fill="#FFFFFF"/>
+<text fill="#000000" x="23" y="52" style="font-family:Arial,sans-serif;font-size:29px;font-weight:bold">CC</text>
+<rect x="152" y="11" width="24" height="39" rx="10.5" ry="16.5" stroke-width="9.5" stroke="#000000" fill="#FFFFFF"/>
+<line x1="154" y1="49" x2="174" y2="12" stroke="#000000" stroke-width="6"/>
+<text fill="#FFFFFF" x="138" y="83" style="font-family:Arial,sans-serif;font-size:19px;font-weight:bold">ZERO</text>
+</a></svg></body></html>
