--- a/c64/ArcadeClassics.html
+++ b/c64/ArcadeClassics.html
@@ -71,7 +71,7 @@ document.onreadystatechange = () => {if(document.readyState === "interactive") {
    xml:space="preserve"
    id="svg3281"
    xmlns="http://www.w3.org/2000/svg"
-><a href="https://validator.w3.org/nu/?doc=https://peripheraldrift.onrender.com/c64/ArcadeClassics.html">
+><a href="https://validator.w3.org/nu/?doc=https://peripheraldrift.onrender.com/c64/ArcadeClassics.html"><title>Valid HTML5</title>
 <g
    id="g3286">
 						<rect
@@ -222,7 +222,8 @@ document.onreadystatechange = () => {if(document.readyState === "interactive") {
 					</g>
 	</a></svg>
 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewbox="0 0 255 90" style="margin-left:1ex;height:3vh" role="img" aria-label="The source code of this page is free to copy without permission">
-<a xlink:href="https://creativecommons.org/publicdomain/zero/1.0/">
+<a xlink:href="https://creativecommons.org/publicdomain/zero/1.0/"><title>The source code of this page is free to
+copy/use without permission/attribution</title>
 <rect x="1" y="1" width="253" height="87" rx="4" ry="4" stroke-width="2" stroke="#000000" fill="#aab2ab"/>
 <rect x="0" y="63" width="255" height="26" stroke="none" fill="#000000"/>
 <circle cx="44" cy="42" r="40.1" stroke="none" fill="#aab2ab"/>
