--- a/c64/ArcadeClassics.html
+++ b/c64/ArcadeClassics.html
@@ -63,7 +63,7 @@ document.onreadystatechange = () => {if(document.readyState === "interactive") {
 <a property="ContentUrl" href="oilswell.svg" style="--vg:url(/c64/oilswell.svg)">&#8203;</a>
 </figure><figure typeof="ImageObject" property="image"><figcaption>River Raid</figcaption>
 <a property="ContentUrl" href="riverraid.svg" style="--vg:url(/c64/riverraid.svg)">&#8203;</a>
-</figure></main>
+</figure></main><footer>
 <svg style="float:right;height:3vh;padding-right:0.5vw" role="img" aria-label="Valid HTML5"
    viewBox="0 0 551.505 204.629"
    overflow="visible"
@@ -232,4 +232,4 @@ copy/use without permission/attribution</title>
 <rect x="152" y="11" width="24" height="39" rx="10.5" ry="16.5" stroke-width="9.5" stroke="#000000" fill="#FFFFFF"/>
 <line x1="154" y1="49" x2="174" y2="12" stroke="#000000" stroke-width="6"/>
 <text fill="#FFFFFF" x="138" y="83" style="font-family:Arial,sans-serif;font-size:19px;font-weight:bold">ZERO</text>
-</a></svg></body></html>
+</a></svg></footer></body></html>
