--- a/c64/ArcadeClassics.html
+++ b/c64/ArcadeClassics.html
@@ -21,15 +21,7 @@
 main {display:grid;margin:0 auto;align-items:center;width:fit-content;grid-template: repeat(5, 1fr) / repeat(3, 1fr)}
 h1,figcaption {font-variant:small-caps;text-align:center;font-size:xx-large;font-family:"C64 Pro"}
 a[style] {display:inline-block;width:384px;height:272px;background:no-repeat var(--vg);font-size:18pt}
-</style>
-<script>
-// @license magnet:?xt=urn:btih:90dc5c0be029de84e523b9b3922520e79e0e6f08&dn=cc0.txt
-document.onreadystatechange = () => {if(document.readyState === "interactive") {
-  }
-}
-// @license-end
-</script>
-</head>
+</style></head>
 <body>
 <h1><a href="https://dn721600.ca.archive.org/0/items/arcade-classics/ArcadeClassics.d64">C64 Arcade Classics</a></h1>
 <main vocab="http://schema.org/" typeof="ImageGallery">
@@ -233,3 +225,4 @@ copy/use without permission/attribution</title>
 <line x1="154" y1="49" x2="174" y2="12" stroke="#000000" stroke-width="6"/>
 <text fill="#FFFFFF" x="138" y="83" style="font-family:Arial,sans-serif;font-size:19px;font-weight:bold">ZERO</text>
 </a></svg></footer></body></html>
+
