Year first cabinet of each appeared

--- a/c64/ArcadeClassics.html
+++ b/c64/ArcadeClassics.html
@@ -32,35 +32,35 @@ document.onreadystatechange = () => {if(document.readyState === "interactive") {
 <h1><a href="https://dn721600.ca.archive.org/0/items/arcade-classics/ArcadeClassics.d64">C64 Arcade Classics</a></h1>
 <main vocab="http://schema.org/" typeof="ImageGallery">
 <figure typeof="ImageObject" property="image"><figcaption>Pacman</figcaption>
-<a property="ContentUrl" href="pacman.svg" style="--vg:url(../c64/pacman.svg)">&#8203;</a>
+<a property="ContentUrl" href="pacman.svg" style="--vg:url(../c64/pacman.svg)" title="1980">&#8203;</a>
 </figure><figure typeof="ImageObject" property="image"><figcaption>Asteroids</figcaption>
-<a property="ContentUrl" href="asteroids.svg" style="--vg:url(../c64/asteroids.svg)">&#8203;</a>
+<a property="ContentUrl" href="asteroids.svg" style="--vg:url(../c64/asteroids.svg)" title="1979">&#8203;</a>
 </figure><figure typeof="ImageObject" property="image"><figcaption>Space Invaders</figcaption>
-<a property="ContentUrl" href="spaceinvaders.svg" style="--vg:url(../c64/spaceinvaders.svg)">&#8203;</a>
+<a property="ContentUrl" href="spaceinvaders.svg" style="--vg:url(../c64/spaceinvaders.svg)" title="1978">&#8203;</a>
 </figure><figure typeof="ImageObject" property="image"><figcaption>Frogger</figcaption>
-<a property="ContentUrl" href="frogger.svg" style="--vg:url(../c64/frogger.svg)">&#8203;</a>
+<a property="ContentUrl" href="frogger.svg" style="--vg:url(../c64/frogger.svg)" title="1981">&#8203;</a>
 </figure><figure typeof="ImageObject" property="image"><figcaption>Tetris</figcaption>
-<a property="ContentUrl" href="tetris.svg" style="--vg:url(../c64/tetris.svg)">&#8203;</a>
+<a property="ContentUrl" href="tetris.svg" style="--vg:url(../c64/tetris.svg)" title="1988">&#8203;</a>
 </figure><figure typeof="ImageObject" property="image"><figcaption>Snake</figcaption>
-<a property="ContentUrl" href="snake.svg" style="--vg:url(../c64/snake.svg)">&#8203;</a>
+<a property="ContentUrl" href="snake.svg" style="--vg:url(../c64/snake.svg)" title="1981 (as Centipede)">&#8203;</a>
 </figure><figure typeof="ImageObject" property="image"><figcaption>Breakout</figcaption>
-<a property="ContentUrl" href="breakout.svg" style="--vg:url(../c64/breakout.svg)">&#8203;</a>
+<a property="ContentUrl" href="breakout.svg" style="--vg:url(../c64/breakout.svg)" title="1976">&#8203;</a>
 </figure><figure typeof="ImageObject" property="image"><figcaption>Q-Bert</figcaption>
-<a property="ContentUrl" href="q-bert.svg" style="--vg:url(../c64/q-bert.svg)">&#8203;</a>
+<a property="ContentUrl" href="q-bert.svg" style="--vg:url(../c64/q-bert.svg)" title="1982">&#8203;</a>
 </figure><figure typeof="ImageObject" property="image"><figcaption>Gyruss</figcaption>
-<a property="ContentUrl" href="gyruss.svg" style="--vg:url(../c64/gyruss.svg)">&#8203;</a>
+<a property="ContentUrl" href="gyruss.svg" style="--vg:url(../c64/gyruss.svg)" title="1983">&#8203;</a>
 </figure><figure typeof="ImageObject" property="image"><figcaption>Missile Command</figcaption>
-<a property="ContentUrl" href="missilecommand.svg" style="--vg:url(../c64/missilecommand.svg)">&#8203;</a>
+<a property="ContentUrl" href="missilecommand.svg" style="--vg:url(../c64/missilecommand.svg)" title="1980">&#8203;</a>
 </figure><figure typeof="ImageObject" property="image"><figcaption>Defender</figcaption>
-<a property="ContentUrl" href="defender.svg" style="--vg:url(../c64/defender.svg)">&#8203;</a>
+<a property="ContentUrl" href="defender.svg" style="--vg:url(../c64/defender.svg)" title="1981">&#8203;</a>
 </figure><figure typeof="ImageObject" property="image"><figcaption>Choplifter</figcaption>
-<a property="ContentUrl" href="choplifter.svg" style="--vg:url(../c64/choplifter.svg)">&#8203;</a>
+<a property="ContentUrl" href="choplifter.svg" style="--vg:url(../c64/choplifter.svg)" title="1985">&#8203;</a>
 </figure><figure typeof="ImageObject" property="image"><figcaption>Popeye</figcaption>
-<a property="ContentUrl" href="popeye.svg" style="--vg:url(../c64/popeye.svg)">&#8203;</a>
+<a property="ContentUrl" href="popeye.svg" style="--vg:url(../c64/popeye.svg)" title="1982">&#8203;</a>
 </figure><figure typeof="ImageObject" property="image"><figcaption>Oils Well</figcaption>
-<a property="ContentUrl" href="oilswell.svg" style="--vg:url(../c64/oilswell.svg)">&#8203;</a>
+<a property="ContentUrl" href="oilswell.svg" style="--vg:url(../c64/oilswell.svg)" title="1982 (as Anteater)">&#8203;</a>
 </figure><figure typeof="ImageObject" property="image"><figcaption>River Raid</figcaption>
-<a property="ContentUrl" href="riverraid.svg" style="--vg:url(../c64/riverraid.svg)">&#8203;</a>
+<a property="ContentUrl" href="riverraid.svg" style="--vg:url(../c64/riverraid.svg)" title="1982">&#8203;</a>
 </figure></main><footer>
 <svg style="float:right;height:3vh;padding-right:0.5vw" role="img" aria-label="Valid HTML5"
    viewBox="0 0 551.505 204.629"
@@ -231,11 +231,3 @@ copy/use without permission/attribution</title>
 <line x1="154" y1="49" x2="174" y2="12" stroke="#000000" stroke-width="6"/>
 <text fill="#FFFFFF" x="138" y="83" style="font-family:Arial,sans-serif;font-size:19px;font-weight:bold">ZERO</text>
 </a></svg></footer></body></html>
-
-
-
-
-
-
-
-
