Update ArcadeClassics.html header

--- a/c64/ArcadeClassics.html
+++ b/c64/ArcadeClassics.html
@@ -28,9 +28,9 @@ document.onreadystatechange = () => {if(document.readyState === "interactive") {
 }
 // @license-end
 </script></head>
-<body>
+<body><header>
 <h1><a href="https://dn721600.ca.archive.org/0/items/arcade-classics/ArcadeClassics.d64">C64 Arcade Classics</a></h1>
-<main vocab="http://schema.org/" typeof="ImageGallery">
+</header><main vocab="http://schema.org/" typeof="ImageGallery">
 <figure typeof="ImageObject" property="image"><figcaption>Pacman</figcaption>
 <a property="ContentUrl" href="pacman.svg" style="--vg:url(../c64/pacman.svg)" title="1980">&#8203;</a>
 </figure><figure typeof="ImageObject" property="image"><figcaption>Asteroids</figcaption>
@@ -231,3 +231,4 @@ copy/use without permission/attribution</title>
 <line x1="154" y1="49" x2="174" y2="12" stroke="#000000" stroke-width="6"/>
 <text fill="#FFFFFF" x="138" y="83" style="font-family:Arial,sans-serif;font-size:19px;font-weight:bold">ZERO</text>
 </a></svg></footer></body></html>
+
