Update ArcadeClassics.html pointer-events

--- a/c64/ArcadeClassics.html
+++ b/c64/ArcadeClassics.html
@@ -20,7 +20,7 @@ main {display:grid;margin:0 auto;align-items:center;width:fit-content;grid-templ
 header,figcaption {font-variant:small-caps;text-align:center;font-size:xx-large;font-family:"C64 Pro"}
 a[style] {display:inline-block;width:384px;height:272px;background:no-repeat var(--vg);font-size:18pt}
 h1:hover + img,h1:focus-within + img {opacity:1}
-img {image-rendering: pixelated;position:absolute;width:960px;height:600px;left:50%;transform:translateX(-50%);transition:opacity 0.3s;opacity:0}
+img {image-rendering:pixelated;pointer-events:none;position:absolute;width:960px;height:600px;left:50%;transform:translateX(-50%);transition:opacity 0.3s;opacity:0}
 </style><script>
 // @license magnet:?xt=urn:btih:90dc5c0be029de84e523b9b3922520e79e0e6f08&dn=cc0.txt
 document.onreadystatechange = () => {if(document.readyState === "interactive") {
@@ -234,3 +234,4 @@ copy/use without permission/attribution</title>
 <line x1="154" y1="49" x2="174" y2="12" stroke="#000000" stroke-width="6"/>
 <text fill="#FFFFFF" x="138" y="83" style="font-family:Arial,sans-serif;font-size:19px;font-weight:bold">ZERO</text>
 </a></svg></footer></body></html>
+
