--- a/c64/ArcadeClassics.html
+++ b/c64/ArcadeClassics.html
@@ -7,7 +7,8 @@
 		<link rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta http-equiv="Content-Security-Policy" content="base-uri 'self'; object-src 'none'; media-src 'self' data:; child-src blob: https://web.archive.org; style-src 'self' 'unsafe-inline' data:; connect-src 'self' blob: data:; font-src https://web.archive.org data:">
-		<meta name="mobile-web-app-capable" content="yes">
+    <link rel="preload" href="tn.svg" as="image" type="image/svg+xml">
+    <meta name="mobile-web-app-capable" content="yes">
 		<meta name="viewport" content="width=device-width, initial-scale=0.5">
 		<meta name="description" content="C64 single load games.">
 		<meta name="theme-color" content="lightblue">
