--- a/c64/index.html
+++ b/c64/index.html
@@ -174,19 +174,19 @@ document.onreadystatechange = () => {if(document.readyState === "interactive") {
    id="polygon3337"
    points="334.903,154.852 334.826,154.878 314.574,150.411 312.627,136.146 302.908,136.599 294.599,136.987 298.43,165.07 335.693,173.567 335.775,173.54 334.903,154.852 " />
 						<polygon
-   style="fill:var(--tcolor)"
+   style="fill:#000000"
    id="polygon3339"
    points="269.401,4.859 278.528,4.433 278.949,13.45 287.298,13.061 286.877,4.043 296.004,3.619 297.277,30.925 288.151,31.35 287.724,22.207 279.375,22.596 279.802,31.74 270.675,32.165 269.401,4.859 " />
 						<polygon
-   style="fill:var(--tcolor)"
+   style="fill:#000000"
    id="polygon3341"
    points="308.428,12.113 300.393,12.487 299.97,3.433 325.171,2.258 325.594,11.312 317.555,11.687 318.405,29.939 309.278,30.365 308.428,12.113 " />
 						<polygon
-   style="fill:var(--tcolor)"
+   style="fill:#000000"
    id="polygon3343"
    points="329.17,2.071 338.687,1.627 344.988,10.949 350.388,1.082 359.908,0.638 361.183,27.944 352.092,28.368 351.461,14.833 345.635,24.834 345.479,24.842 338.742,15.427 339.373,28.961 330.443,29.378 329.17,2.071 " />
 						<polygon
-   style="fill:var(--tcolor)"
+   style="fill:#000000"
    id="polygon3345"
    points="364.451,0.426 373.581,0 374.434,18.281 387.27,17.682 387.69,26.708 365.726,27.732 364.451,0.426 " />
 						<polygon
@@ -241,5 +241,6 @@ copy/use without permission/attribution</title>
 <line x1="154" y1="49" x2="174" y2="12" stroke="#000000" stroke-width="6"/>
 <text fill="#FFFFFF" x="138" y="83" style="font-family:Arial,sans-serif;font-size:19px;font-weight:bold">ZERO</text>
 </a></svg></footer></body></html>
+
 
 
