--- a/c64/index.html
+++ b/c64/index.html
@@ -38,39 +38,39 @@ document.onreadystatechange = () => {if(document.readyState === "interactive") {
 <figure typeof="ImageObject" property="image">
 <a property="ContentUrl" href="rollers.svg" style="--vg:url(../c64/pd.svg#i1)">Rollers</a>
 </figure><figure typeof="ImageObject" property="image">
-<a property="ContentUrl" href="anomalous.svg" style="--vg:url(../c64/pd.svg#i2)">Anomalous</a>
+<a property="ContentUrl name" href="anomalous.svg" style="--vg:url(../c64/pd.svg#i2)">Anomalous</a>
 </figure><figure typeof="ImageObject" property="image">
-<a property="ContentUrl" href="semikani.svg" style="--vg:url(../c64/pd.svg#i3)">Semikani</a>
+<a property="ContentUrl name" href="semikani.svg" style="--vg:url(../c64/pd.svg#i3)">Semikani</a>
 </figure><figure typeof="ImageObject" property="image">
-<a property="ContentUrl" href="beans.svg" style="--vg:url(../c64/pd.svg#i4)">Beans</a>
+<a property="ContentUrl name" href="beans.svg" style="--vg:url(../c64/pd.svg#i4)">Beans</a>
 </figure><figure typeof="ImageObject" property="image">
-<a property="ContentUrl" href="buttons.svg" style="--vg:url(../c64/pd.svg#i5)">Buttons</a>
+<a property="ContentUrl name" href="buttons.svg" style="--vg:url(../c64/pd.svg#i5)">Buttons</a>
 </figure><figure typeof="ImageObject" property="image">
-<a property="ContentUrl" href="snakes.svg" style="--vg:url(../c64/pd.svg#i6)">Snakes</a>
+<a property="ContentUrl name" href="snakes.svg" style="--vg:url(../c64/pd.svg#i6)">Snakes</a>
 </figure><figure typeof="ImageObject" property="image">
-<a property="ContentUrl" href="sidesnakes.svg" style="--vg:url(../c64/pd.svg#i7)">Sidesnakes</a>
+<a property="ContentUrl name" href="sidesnakes.svg" style="--vg:url(../c64/pd.svg#i7)">Sidesnakes</a>
 </figure><figure typeof="ImageObject" property="image">
-<a property="ContentUrl" href="ouch.svg" style="--vg:url(../c64/pd.svg#i8)">Ouch</a>
+<a property="ContentUrl name" href="ouch.svg" style="--vg:url(../c64/pd.svg#i8)">Ouch</a>
 </figure><figure typeof="ImageObject" property="image">
-<a property="ContentUrl" href="zigzags.svg" style="--vg:url(../c64/pd.svg#i9)">Zig Zags</a>
+<a property="ContentUrl name" href="zigzags.svg" style="--vg:url(../c64/pd.svg#i9)">Zig Zags</a>
 </figure><figure typeof="ImageObject" property="image">
-<a property="ContentUrl" href="timewarp.svg" style="--vg:url(../c64/pd.svg#i10)">Timewarp</a>
+<a property="ContentUrl name" href="timewarp.svg" style="--vg:url(../c64/pd.svg#i10)">Timewarp</a>
 </figure><figure typeof="ImageObject" property="image">
-<a property="ContentUrl" href="primrose.svg" style="--vg:url(../c64/pd.svg#i11)">Primrose Field</a>
+<a property="ContentUrl name" href="primrose.svg" style="--vg:url(../c64/pd.svg#i11)">Primrose Field</a>
 </figure><figure typeof="ImageObject" property="image">
-<a property="ContentUrl" href="filmstrip.svg" style="--vg:url(../c64/pd.svg#i12)">Film Strip</a>
+<a property="ContentUrl name" href="filmstrip.svg" style="--vg:url(../c64/pd.svg#i12)">Film Strip</a>
 </figure><figure typeof="ImageObject" property="image">
-<a property="ContentUrl" href="scintillating.svg" style="--vg:url(../c64/pd.svg#i13)">Scintillating</a>
+<a property="ContentUrl name" href="scintillating.svg" style="--vg:url(../c64/pd.svg#i13)">Scintillating</a>
 </figure><figure typeof="ImageObject" property="image">
-<a property="ContentUrl" href="toroidalbeans.svg" style="--vg:url(../c64/pd.svg#i14)">Toroidal Beans</a>
+<a property="ContentUrl name" href="toroidalbeans.svg" style="--vg:url(../c64/pd.svg#i14)">Toroidal Beans</a>
 </figure><figure typeof="ImageObject" property="image">
-<a property="ContentUrl" href="toroidalball.svg" style="--vg:url(../c64/pd.svg#i15)">Toroidal Ball</a>
+<a property="ContentUrl name" href="toroidalball.svg" style="--vg:url(../c64/pd.svg#i15)">Toroidal Ball</a>
 </figure><figure typeof="ImageObject" property="image">
-<a property="ContentUrl" href="toroid2balls.svg" style="--vg:url(../c64/pd.svg#i16)">Toroid 2 Balls</a>
+<a property="ContentUrl name" href="toroid2balls.svg" style="--vg:url(../c64/pd.svg#i16)">Toroid 2 Balls</a>
 </figure><figure typeof="ImageObject" property="image">
-<a property="ContentUrl" href="wavylines.svg" style="--vg:url(../c64/pd.svg#i17)">Wavy Lines</a>
+<a property="ContentUrl name" href="wavylines.svg" style="--vg:url(../c64/pd.svg#i17)">Wavy Lines</a>
 </figure><figure typeof="ImageObject" property="image">
-<a property="ContentUrl" href="pd.svg" style="--vg:url(../c64/pd.svg)">CC0 License</a>
+<a property="ContentUrl name" href="pd.svg" style="--vg:url(../c64/pd.svg)">CC0 License</a>
 </figure></main><footer>
 <svg style="float:right;height:3vh;padding-right:0.5vw" role="img" aria-label="Valid HTML5"
    viewBox="0 0 551.505 204.629"
@@ -241,6 +241,7 @@ copy/use without permission/attribution</title>
 <line x1="154" y1="49" x2="174" y2="12" stroke="#000000" stroke-width="6"/>
 <text fill="#FFFFFF" x="138" y="83" style="font-family:Arial,sans-serif;font-size:19px;font-weight:bold">ZERO</text>
 </a></svg></footer></body></html>
+
 
 
 
