--- a/c64/index.html
+++ b/c64/index.html
@@ -70,7 +70,7 @@ document.onreadystatechange = () => {if(document.readyState === "interactive") {
 </figure><figure typeof="ImageObject" property="image">
 <a property="ContentUrl" href="wavylines.svg" style="--vg:url(../c64/pd.svg#i17)"><span property="name">Wavy Lines</span></a>
 </figure><figure typeof="ImageObject" property="image">
-<a property="ContentUrl name" typeof="text" href="pd.svg" style="--vg:url(../c64/pd.svg)"><span property="name">CC0 License</span></a>
+<a property="ContentUrl" href="pd.svg" style="--vg:url(../c64/pd.svg)"><span property="name">CC0 License</span></a>
 </figure></main><footer>
 <svg style="float:right;height:3vh;padding-right:0.5vw" role="img" aria-label="Valid HTML5"
    viewBox="0 0 551.505 204.629"
@@ -241,6 +241,7 @@ copy/use without permission/attribution</title>
 <line x1="154" y1="49" x2="174" y2="12" stroke="#000000" stroke-width="6"/>
 <text fill="#FFFFFF" x="138" y="83" style="font-family:Arial,sans-serif;font-size:19px;font-weight:bold">ZERO</text>
 </a></svg></footer></body></html>
+
 
 
 
