--- a/c64/ArcadeClassics.html
+++ b/c64/ArcadeClassics.html
@@ -21,8 +21,9 @@ img {image-rendering:pixelated;pointer-events:none;position:absolute;width:960px
 </style><script>
 // @license magnet:?xt=urn:btih:90dc5c0be029de84e523b9b3922520e79e0e6f08&dn=cc0.txt
 document.onreadystatechange = () => {if(document.readyState === "interactive") {
-	let v = document.querySelector('a[href$="doc="]');
-	v.setAttribute("href",v.getAttribute("href") + location.href);
+    for (const v of document.querySelectorAll('a[href$="="]')) {
+      v.setAttribute("href",v.getAttribute("href") + location.href);
+    }
   }
 }
 // @license-end
@@ -109,7 +110,13 @@ document.onreadystatechange = () => {if(document.readyState === "interactive") {
 								<polygon
    style="fill:#005a9c"
    points="70.064,56.899 88.236,118.669 106.405,56.899 119.555,56.899 89.487,158.386 88.234,158.386 69.438,95.493 50.644,158.386 49.388,158.386 19.321,56.899 32.475,56.899 50.644,118.669 62.923,77.07 56.906,56.899 70.064,56.899 "
-   id="path2307" />
+ document.onreadystatechange = () => {if(document.readyState === "interactive") {
+    for (const v of document.querySelectorAll('a[href$="="]')) {
+      v.setAttribute("href",v.getAttribute("href") + location.href);
+    }
+  }
+}
+  id="path2307" />
 								<path
    style="fill:#005a9c"
    d="M 156.913,125.805 C 156.913,134.996 154.469,142.727 149.582,148.99 C 144.698,155.253 138.37,158.387 130.601,158.387 C 124.757,158.387 119.659,156.521 115.318,152.811 C 110.971,149.088 107.753,144.055 105.665,137.716 L 115.942,133.455 C 117.446,137.298 119.433,140.326 121.893,142.537 C 124.354,144.745 127.254,145.854 130.601,145.854 C 134.109,145.854 137.077,143.889 139.501,139.971 C 141.924,136.047 143.134,131.32 143.134,125.805 C 143.134,119.709 141.835,114.996 139.242,111.65 C 136.241,107.728 131.519,105.759 125.083,105.759 L 120.075,105.759 L 120.075,99.748 L 137.616,69.425 L 116.435,69.425 L 110.547,79.443 L 106.801,79.443 L 106.801,56.899 L 155.659,56.899 L 155.659,63.032 L 137.117,94.991 C 143.624,97.07 148.56,100.878 151.9,106.39 C 155.243,111.906 156.913,118.374 156.913,125.805 z "
@@ -230,7 +237,13 @@ copy/use without permission/attribution</title>
 <rect x="152" y="11" width="24" height="39" rx="10.5" ry="16.5" stroke-width="9.5" stroke="#000000" fill="#FFFFFF"/>
 <line x1="154" y1="49" x2="174" y2="12" stroke="#000000" stroke-width="6"/>
 <text fill="#FFFFFF" x="138" y="83" style="font-family:Arial,sans-serif;font-size:19px;font-weight:bold">ZERO</text>
+</a></svg>
+<svg viewBox="0 0 943 1019" style="fill: #4D44FF; vertical-align: -0.1em; height: 3vh" role="img" aria-label="Valid RDFa structured data">
+<a href="https://validator.schema.org/#url="><title>Valid RDFa 
+structured data</title>
+<path fill-rule="evenodd" d="M845,668c-6-3-13-6-19-9l5-0c0,0-42-18-45-152 c-4-133,40-156,40-156l-0,0c33-17,61-43,79-78c48-91,14-203-77-252 C729-26,617,8,569,99c-20,37-25,78-19,117l-2-3c0,0,11,48-103,119 c-113,71-165,35-165,35l3,5c-3-2-6-4-10-6C183,317,70,352,22,443 c-48,91-14,203,77,252c68,36,147,26,204-19l-1,2c0,0,41-34,160,30 c94,50,108,100,110,118c-2,69,33,137,98,171c91,48,203,14,252-77 C970,829,935,717,845,668z M635,693c-15,5-58,11-148-37 c-98-53-113-97-115-110c1-16,1-32-2-48l1,1c0,0-8-43,104-112 c100-62,146-50,154-47c5,4,11,7,17,10c11,6,23,11,35,14 c14,13,39,50,42,149c3,99-26,137-42,150C664,671,648,681,635,693z   M622,81c-54,59-55,146-3,196c-26-25-25-77,1-126 c3-4,13-15,27-10c1,0,2,1,3,1c3,1,7,1,10,1 c22-1,38-19,37-41c-0-10-4-18-11-25c50-33,107-37,131-15l1,0 C765,12,677,21,622,81z   M78,431c-54,59-55,146-03,196c-26-25-25-77,1-126 c3-4,13-15,27-10c1,0,2,1,3,1c3,1,7,1,10,1 c22-1,38-19,37-41c-0-10-4-18-11-25c50-33,107-37,131-15l1,0 C221,363,133,371,78,431z   M654,728c-54,59-55,146-3,196c-26-25-25-77,1-126 c3-4,13-15,27-10c1,0,2,1,3,1c3,1,7,1,10,1 c22-1,38-19,37-41c-0-10-4-18-11-25c50-33,107-37,131-15l1,0 C797,659,709,668,654,728z" />
 </a></svg></footer></body></html>
+
 
 
 
