--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title property="headline">Does Your Pet See Peripheral Drift?</title>
 	<meta name="description" property="about description" content="Slideshow for testing motion illusions on cats, dogs, birds, etc.">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<meta http-equiv="Content-Security-Policy" content="object-src 'none'; media-src 'self' data:; img-src 'self' data:; frame-src 'self'; style-src 'self' 'unsafe-inline'">
+	<meta http-equiv="Content-Security-Policy" content="object-src 'none'">
 	<meta name="referrer" content="origin-when-crossorigin">
 	<meta name="mobile-web-app-capable" content="yes">
 	<meta name="apple-touch-fullscreen" content="yes">
